external_libraries/gidpost/fortran_module/gidpost_interface.f90

    
    CHARACTER(1,KIND=C_CHAR), TARGET :: Comp_cpp(GID_MAX_CHAR_LEN,3)
    TYPE(C_PTR) :: Comp_ptr(3)

    INTERFACE
      SUBROUTINE GiD_LAComponents_cpp(Comp1,Comp2,Comp3) BIND(C,NAME='GiD_LAComponents')
        IMPORT :: C_PTR
        TYPE(C_PTR), VALUE, INTENT(IN) :: Comp1, Comp2, Comp3
      END SUBROUTINE GiD_LAComponents_cpp
    END INTERFACE
    
    Comp_ptr(1)  = C_PTR_STRING(Comp1,Comp_cpp(:,1))
    Comp_ptr(2)  = C_PTR_STRING(Comp2,Comp_cpp(:,2))
    Comp_ptr(3)  = C_PTR_STRING(Comp3,Comp_cpp(:,3))

    CALL GiD_LAComponents_cpp(Comp_ptr(1),Comp_ptr(3),Comp_ptr(3))

  END SUBROUTINE GiD_LAComponents
  
  SUBROUTINE GiD_fLAComponents(fd,Comp1,Comp2,Comp3)

    TYPE(GiD_File),   INTENT(IN) :: fd
    CHARACTER(LEN=*), INTENT(IN) :: Comp1, Comp2, Comp3
    
    CHARACTER(GID_MAX_CHAR_LEN) :: Comp_f(3)

    Comp_f(1) = Comp1; Comp_f(2) = Comp2; Comp_f(3) = Comp3

    CALL GiD_fResultComponents(fd,3,Comp_f)

  END SUBROUTINE GiD_fLAComponents
  
!--------------------------------------------------------------------------

  SUBROUTINE GiD_ComplexScalarComp(Re,Im)

    CHARACTER(LEN=*), INTENT(IN) :: Re,Im
    
    CHARACTER(1,KIND=C_CHAR), TARGET :: Re_cpp(GID_MAX_CHAR_LEN)
    CHARACTER(1,KIND=C_CHAR), TARGET :: Im_cpp(GID_MAX_CHAR_LEN)
    TYPE(C_PTR) :: Re_ptr, Im_ptr

    INTERFACE
      SUBROUTINE GiD_ComplexScalarComp_cpp(Re,Im) BIND(C,NAME='GiD_ComplexScalarComp')
        IMPORT :: C_PTR
        TYPE(C_PTR), VALUE, INTENT(IN) :: Re,Im
      END SUBROUTINE GiD_ComplexScalarComp_cpp
    END INTERFACE

    ! Optional values:
    Re_ptr = C_PTR_STRING(Re,Re_cpp)
    Im_ptr = C_PTR_STRING(Im,Im_cpp)

    CALL GiD_ComplexScalarComp_cpp(Re_ptr,Im_ptr)

  END SUBROUTINE GiD_ComplexScalarComp  

  SUBROUTINE GiD_fComplexScalarComp(fd,Re,Im)

    TYPE(GiD_File),   INTENT(IN) :: fd
    CHARACTER(LEN=*), INTENT(IN) :: Re,Im

    CHARACTER(GID_MAX_CHAR_LEN) :: Comp_f(2)

    Comp_f(1)  = Re
    Comp_f(2)  = Im

    CALL GiD_fResultComponents(fd,2,Comp_f)

  END SUBROUTINE GiD_fComplexScalarComp  
  
!--------------------------------------------------------------------------

  SUBROUTINE GiD_ComplexVectorComp(Rex,Imx,Rey,Imy,Rez,Imz)

    CHARACTER(LEN=*), INTENT(IN) :: Rex,Imx,Rey,Imy,Rez,Imz
    
    CHARACTER(1,KIND=C_CHAR), TARGET :: Rex_cpp(GID_MAX_CHAR_LEN)
    CHARACTER(1,KIND=C_CHAR), TARGET :: Imx_cpp(GID_MAX_CHAR_LEN)
    CHARACTER(1,KIND=C_CHAR), TARGET :: Rey_cpp(GID_MAX_CHAR_LEN)
    CHARACTER(1,KIND=C_CHAR), TARGET :: Imy_cpp(GID_MAX_CHAR_LEN)
    CHARACTER(1,KIND=C_CHAR), TARGET :: Rez_cpp(GID_MAX_CHAR_LEN)
    CHARACTER(1,KIND=C_CHAR), TARGET :: Imz_cpp(GID_MAX_CHAR_LEN)
    TYPE(C_PTR) :: Rex_ptr, Imx_ptr, Rey_ptr, Imy_ptr, Rez_ptr, Imz_ptr

    INTERFACE
      SUBROUTINE GiD_ComplexVectorComp_cpp(Rex,Imx,Rey,Imy,Rez,Imz) BIND(C,NAME='GiD_ComplexVectorComp')
        IMPORT :: C_PTR
        TYPE(C_PTR), VALUE, INTENT(IN) :: Rex,Imx,Rey,Imy,Rez,Imz
      END SUBROUTINE GiD_ComplexVectorComp_cpp
    END INTERFACE

    ! Optional values:
    Rex_ptr = C_PTR_STRING(Rex,Rex_cpp)
    Imx_ptr = C_PTR_STRING(Imx,Imx_cpp)
    Rey_ptr = C_PTR_STRING(Rey,Rey_cpp)
    Imy_ptr = C_PTR_STRING(Imy,Imy_cpp)
    Rez_ptr = C_PTR_STRING(Rez,Rez_cpp)
    Imz_ptr = C_PTR_STRING(Imz,Imz_cpp)

    CALL GiD_ComplexVectorComp_cpp(Rex_ptr, Imx_ptr, Rey_ptr, Imy_ptr, Rez_ptr, Imz_ptr)

  END SUBROUTINE GiD_ComplexVectorComp  

  SUBROUTINE GiD_fComplexVectorComp(fd,Rex,Imx,Rey,Imy,Rez,Imz)

    TYPE(GiD_File),   INTENT(IN) :: fd
    CHARACTER(LEN=*), INTENT(IN) :: Rex,Imx,Rey,Imy,Rez,Imz

    CHARACTER(GID_MAX_CHAR_LEN) :: Comp_f(6)

    Comp_f(1)  = Rex
    Comp_f(2)  = Imx
    Comp_f(3)  = Rey
    Comp_f(4)  = Imy
    Comp_f(5)  = Rez
    Comp_f(6)  = Imz

    CALL GiD_fResultComponents(fd,6,Comp_f)

  END SUBROUTINE GiD_fComplexVectorComp    
    
!--------------------------------------------------------------------------
    
  SUBROUTINE GiD_ResultUnit( unit_name )
    
    CHARACTER(LEN=*), INTENT(IN) :: unit_name
    
    CHARACTER(1,KIND=C_CHAR) :: unit_name_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_ResultUnit_cpp( unit_name_cpp ) BIND(C,NAME='GiD_ResultUnit')      
        IMPORT :: C_CHAR
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: unit_name_cpp(1)
      END SUBROUTINE GiD_ResultUnit_cpp
    END INTERFACE

    unit_name_cpp = C_STRING(unit_name)
    call GiD_ResultUnit_cpp(unit_name_cpp)

  END SUBROUTINE GiD_ResultUnit

  SUBROUTINE GiD_fResultUnit( fd, unit_name )

    TYPE(GiD_File),   INTENT(IN) :: fd
    CHARACTER(LEN=*), INTENT(IN) :: unit_name
    
    CHARACTER(1,KIND=C_CHAR) :: unit_name_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_fResultUnit_cpp( fd, unit_name_cpp ) BIND(C,NAME='GiD_fResultUnit')      
        IMPORT :: GiD_File, C_CHAR
        TYPE(GiD_File), VALUE, INTENT(IN) :: fd
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: unit_name_cpp(1)
      END SUBROUTINE GiD_fResultUnit_cpp
    END INTERFACE

    unit_name_cpp = C_STRING(unit_name)
    call GiD_fResultUnit_cpp(fd,unit_name_cpp)

  END SUBROUTINE GiD_fResultUnit

!--------------------------------------------------------------------------

  SUBROUTINE GiD_BeginResultGroup(Analysis,Step,Where,GaussPointsName)

    CHARACTER(LEN=*), INTENT(IN) :: Analysis        ! analysis type (timestep,load,...)
    REAL(C_DOUBLE),   INTENT(IN) :: Step            !
    TYPE(GiD_ResLoc), INTENT(IN) :: Where           ! result location (onnodes,ongausspoint)
    CHARACTER(LEN=*), INTENT(IN) :: GaussPointsName ! gauss point name (just ongausspoint)
    
    CHARACTER(1,KIND=C_CHAR), TARGET :: GaussPointsName_cpp(GID_MAX_CHAR_LEN)
    CHARACTER(1,KIND=C_CHAR) :: Analysis_cpp(MAX_STRING_LEN)
    TYPE(C_PTR) :: GaussPointsName_ptr

    INTERFACE
      SUBROUTINE GiD_BeginResultGroup_cpp(Analysis,Step,Where,GaussPointsName) BIND(C,NAME='GiD_BeginResultGroup')
        IMPORT :: C_DOUBLE, GiD_ResLoc, C_CHAR, C_PTR
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: Analysis(1)        ! analysis type (timestep,load,...)
        REAL(C_DOUBLE),    VALUE, INTENT(IN) :: Step               !
        TYPE(GiD_ResLoc),  VALUE, INTENT(IN) :: Where              ! result location (onnodes,ongausspoint)
        TYPE(C_PTR),       VALUE, INTENT(IN) :: GaussPointsName    ! gauss point name (just ongausspoint)
      END SUBROUTINE GiD_BeginResultGroup_cpp
    END INTERFACE
    
    ! Optional values:
    GaussPointsName_ptr = C_PTR_STRING(GaussPointsName,GaussPointsName_cpp)
    Analysis_cpp = C_STRING(Analysis)

    CALL GiD_BeginResultGroup_cpp(Analysis_cpp,Step,Where,GaussPointsName_ptr)

  END SUBROUTINE GiD_BeginResultGroup
  
  SUBROUTINE GiD_fBeginResultGroup(fd,Analysis,Step,Where,GaussPointsName)

    TYPE(GiD_File),   INTENT(IN) :: fd             ! file
    CHARACTER(LEN=*), INTENT(IN) :: Analysis       ! analysis type (timestep,load,...)
    REAL(C_DOUBLE),   INTENT(IN) :: Step           !
    TYPE(GiD_ResLoc), INTENT(IN) :: Where          ! result location (onnodes,ongausspoint)
    CHARACTER(LEN=*), INTENT(IN) :: GaussPointsName ! gauss point name (just ongausspoint)
    
    CHARACTER(1,KIND=C_CHAR), TARGET :: GaussPointsName_cpp(GID_MAX_CHAR_LEN)
    CHARACTER(1,KIND=C_CHAR) :: Analysis_cpp(MAX_STRING_LEN)
    TYPE(C_PTR) :: GaussPointsName_ptr

    INTERFACE
      SUBROUTINE GiD_fBeginResultGroup_cpp(fd,Analysis,Step,Where,GaussPointsName) BIND(C,NAME='GiD_fBeginResultGroup')
        IMPORT :: C_DOUBLE, GiD_ResLoc, C_CHAR, GiD_File, C_PTR
        TYPE(GiD_File),    VALUE, INTENT(IN) :: fd                 ! file
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: Analysis(1)        ! analysis type (timestep,load,...)
        REAL(C_DOUBLE),    VALUE, INTENT(IN) :: Step               !
        TYPE(GiD_ResLoc),  VALUE, INTENT(IN) :: Where              ! result location (onnodes,ongausspoint)
        TYPE(C_PTR),       VALUE, INTENT(IN) :: GaussPointsName    ! gauss point name (just ongausspoint)
      END SUBROUTINE GiD_fBeginResultGroup_cpp
    END INTERFACE
    
    ! Optional values:
    GaussPointsName_ptr = C_PTR_STRING(GaussPointsName,GaussPointsName_cpp)
    Analysis_cpp = C_STRING(Analysis)

    CALL GiD_fBeginResultGroup_cpp(fd,Analysis_cpp,Step,Where,GaussPointsName_ptr)

  END SUBROUTINE GiD_fBeginResultGroup
  
!--------------------------------------------------------------------------
  
  SUBROUTINE GiD_ResultDescription(Result,Type)

    CHARACTER(LEN=*),  INTENT(IN) :: Result         ! result name
    TYPE(GiD_ResType), INTENT(IN) :: Type           ! result tipe (scalar,vector,matrix)
    
    CHARACTER(1,KIND=C_CHAR) :: Result_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_ResultDescription_cpp(Result_cpp,Type) BIND(C,NAME='GiD_ResultDescription')
        IMPORT :: C_CHAR, GiD_ResType
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: Result_cpp(1)      ! result name
        TYPE(GiD_ResType), VALUE, INTENT(IN) :: Type               ! result tipe (scalar,vector,matrix)
      END SUBROUTINE GiD_ResultDescription_cpp
    END INTERFACE

    Result_cpp   = C_STRING(Result)
    CALL GiD_ResultDescription_cpp(Result_cpp,Type)

  END SUBROUTINE GiD_ResultDescription
  
  SUBROUTINE GiD_fResultDescription(fd,Result,Type)

    TYPE(GiD_File),    INTENT(IN) :: fd             ! GiD file
    CHARACTER(LEN=*),  INTENT(IN) :: Result         ! result name
    TYPE(GiD_ResType), INTENT(IN) :: Type           ! result tipe (scalar,vector,matrix)

    CHARACTER(1,KIND=C_CHAR) :: Result_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_fResultDescription_cpp(fd,Result_cpp,Type) BIND(C,NAME='GiD_fResultDescription')
        IMPORT :: C_CHAR, GiD_ResType, GiD_File
        TYPE(GiD_File),    VALUE, INTENT(IN) :: fd
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: Result_cpp(1)      ! result name
        TYPE(GiD_ResType), VALUE, INTENT(IN) :: Type               ! result tipe (scalar,vector,matrix)
      END SUBROUTINE GiD_fResultDescription_cpp
    END INTERFACE

    Result_cpp   = C_STRING(Result)
    CALL GiD_fResultDescription_cpp(fd,Result_cpp,Type)

  END SUBROUTINE GiD_fResultDescription
  
!--------------------------------------------------------------------------

    SUBROUTINE GiD_BeginOnMeshGroup(Label)

    CHARACTER(LEN=*), INTENT(IN) :: Label

    CHARACTER(1,KIND=C_CHAR) :: Label_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_BeginOnMeshGroup_cpp(Label_cpp) BIND(C,NAME='GiD_BeginOnMeshGroup')
        IMPORT :: C_CHAR
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: Label_cpp(1)
      END SUBROUTINE GiD_BeginOnMeshGroup_cpp
    END INTERFACE

    Label_cpp = C_STRING(Label)
    CALL GiD_BeginOnMeshGroup_cpp(Label_cpp)

  END SUBROUTINE GiD_BeginOnMeshGroup
  
  SUBROUTINE GiD_fBeginOnMeshGroup(fd,Label)

    TYPE(GiD_File),   INTENT(IN) :: fd
    CHARACTER(LEN=*), INTENT(IN) :: Label

    CHARACTER(1,KIND=C_CHAR) :: Label_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_fBeginOnMeshGroup_cpp(fd,Label_cpp) BIND(C,NAME='GiD_fBeginOnMeshGroup')
        IMPORT :: C_CHAR, GiD_File
        TYPE(GiD_File),    VALUE, INTENT(IN) :: fd
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: Label_cpp(1)
      END SUBROUTINE GiD_fBeginOnMeshGroup_cpp
    END INTERFACE

    Label_cpp = C_STRING(Label)
    CALL GiD_fBeginOnMeshGroup_cpp(fd,label_cpp)

  END SUBROUTINE GiD_fBeginOnMeshGroup

!--------------------------------------------------------------------------
!  AUXILIAR ROUTINES
!--------------------------------------------------------------------------
  
  PURE FUNCTION C_STRING(f_string)

    CHARACTER(LEN=*), INTENT(IN) :: f_string
    CHARACTER(1,KIND=C_CHAR) :: C_STRING(LEN_TRIM(f_string)+1)
    
    C_STRING = TRANSFER(TRIM(f_string)//C_NULL_CHAR,C_CHAR_ARRAY)

  END FUNCTION C_STRING

  FUNCTION C_PTR_STRING(string_for,string_cpp)
